added mutate function image, edited ggplot image, changed the writing to adjust for removal of filter and select, updated some minor grammar things, updated the writing to improve the clarity or flow

--- a/index.Rmd
+++ b/index.Rmd
@@ -180,12 +180,13 @@ can_lang
 ```
 
 We will begin with a scatter plot of the `mother_tongue` and `most_at_home` columns from our data frame.
-To create a scatter plot of these two variables using the `ggplot` function, we do the following: 
+To create a scatter plot of these two variables using the `ggplot` function, we would the following: 
 
 ```{r img-ggplot, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Creating a scatter plot with the ggplot function", out.width="1100", fig.retina = 2}
-knitr::include_graphics("img/ggplot_function.jpeg")
+knitr::include_graphics("img/function_ggplot.jpeg")
 ```
 
+Below we create a scatter plot using the `ggplot` function as shown in figure \@ref(fig:img-ggplot):
 ```{r mother-tongue-vs-most-at-home, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point()
@@ -211,7 +212,9 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   ylab("Mother tongue (number of Canadian residents)")
 ```
 
-In figure \@ref(fig:mother-tongue-vs-most-at-home-labs), most of the 214 observations in this data set are bunched up in the lower left-hand side of this visualization because many people in Canada speak the two official languages (English and French). Thus to answer our question, we will need to adjust the scale of the x and y axes so that they are on a log scale. We can again add additional layers to the plot object using the `+` symbol to do this:
+In figure \@ref(fig:mother-tongue-vs-most-at-home-labs), most of the 214 observations in this data set are bunched up in the lower left-hand side of this visualization because many people in Canada speak the two official languages (English and French). Thus to answer our question, we will need to adjust the scale of the x and y axes so that they are on a log scale.
+
+We can again add additional layers to the plot object using the `+` symbol to do this:
 
 ```{r mother-tongue-vs-most-at-home-scale, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
@@ -226,8 +229,7 @@ From figure \@ref(fig:mother-tongue-vs-most-at-home-scale), we see that for the 
 two variables do this, we call this a *positive relationship*. Because the points are fairly close together, we can say that the relationship is strong. Because drawing a straight line through these 
 points would fit the pattern we observe quite well, we say that it's linear.
 
-Learning how to describe data visualizations is a very useful skill. We will provide descriptions for you in this course (as we did above) until we get to Chapter 4, 
-which focuses on data visualization. Then, we will explicitly teach you how to do this yourself and not over-state or over-interpret the results from a visualization.
+Learning how to describe data visualizations is a very useful skill. We will provide descriptions for you in this course (as we did above) until we get to Chapter 4, which focuses on data visualization. Then, we will explicitly teach you how to do this yourself and not over-state or over-interpret the results from a visualization.
 
 ### Changing the units
 
@@ -238,27 +240,21 @@ english_mother_tongue <- can_lang %>%
 census_popn <- 35151728
 ```
 
-What does it mean that `r format(english_mother_tongue, scientific = FALSE, big.mark = ",")` 
-people reported that their mother tongue was English in the 2016 Canadian 
-census? To really understand this number, we need context. In particular, how 
-many people were in Canada when this data was collected? From the 2016 Canadian 
-census profile, we can see that the population was reported to be 
-`r format(census_popn, scientific = FALSE, big.mark = ",")` people. The count of 
-the number of people who report that English is their mother tongue is much more 
-meaningful when we report it in this context. We can even go a step further and 
-transform this count to a relative frequency, or proportion, so that we can 
-represent this as a single meaningful number in our data visualizations. We can 
-do this by dividing the number of people reporting a given language as their 
-mother tongue by the number of people who live in Canada. For example, the 
-proportion of people who reported that their mother tongue was English in the 
-2016 Canadian census was 
-`r format(round(english_mother_tongue/census_popn, 2), scientific = FALSE, big.mark = ",")`.
+Suppose from the data we find that `r format(english_mother_tongue, scientific = FALSE, big.mark = ",")` 
+people reported that their mother tongue was English in the 2016 Canadian census. What does this number mean to us? To understand this number, we need context. In particular, how many people were in Canada when this data was collected? From the 2016 Canadian 
+census profile, the population was reported to be 
+`r format(census_popn, scientific = FALSE, big.mark = ",")` people. The number of people who report that English is their mother tongue is much more meaningful when we report it in this context. We can even go a step further and transform this count to a relative frequency or proportion to represent this as a single meaningful number in our data visualizations. We can do this by dividing the number of people reporting a given language as their mother tongue by the number of people who live in Canada. For example, the proportion of people who reported that their mother tongue was English in the 2016 Canadian census was `r format(round(english_mother_tongue/census_popn, 2), scientific = FALSE, big.mark = ",")`.
 
-We can use the `mutate` function in R to do this for all of the languages in the 2016 Canadian census data set. `mutate` is useful for creating new columns in a data frame, as well as transforming existing columns. It's general syntax is: `mutate(dataframe, column_to_create/transform = value/how_to_transform)`. Below we use mutate to calculate the proportion of people reporting a given language as their mother tongue for all the languages in the `can_lang` data set:
 
+We can use the `mutate` function in R to calculate the proportion for all of the languages in the 2016 Canadian census data set. `mutate` is useful for creating new columns in a data frame or transforming existing columns. Its general syntax is: 
+
+```{r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the mutate function", out.width="1100", fig.retina = 2}
+knitr::include_graphics("img/function_mutate.jpeg")
+```
+
+Below we use `mutate` to calculate the proportion of people reporting a given language as their mother tongue for all the languages in the `can_lang` data set as shown in figure \@ref(fig:img-mutate):
 ```{r}
 can_lang <- mutate(can_lang, mother_tongue = mother_tongue / 35151728)
-can_lang
 ```
 
 Let's also do this for the counts of the number of people who report that they speak a given language most often at home:
@@ -279,12 +275,11 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   scale_y_log10(labels = scales::comma)
 ```
 
-From the visualization above, we can now clearly see that not just a lot, but that the majority of Canadians reported English as their mother tongue and as the language they speak most often at home. Changing the units to include this context increases our understanding and allows us to interpret the numbers in our data set better.
+The visualization in figure \@ref(fig:mother-tongue-vs-most-at-home-scale-props) helps us with our first question exploring the relationship between the number of people who speak a language as their mother tongue and the number who speak that language as their primary language spoken at home. We can now clearly see that most Canadians reported English as their mother tongue and the language they speak most often at home. Changing the units to include this context increases our understanding and allows us to better interpret the numbers in our data set.
+
 
 ### Coloring points by group
-Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the 
-scatter plot we have already created by group/category. For example,
-given that we have the higher level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
+Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points by their category. For example, given that we have the higher-level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
 scatter plot to represent each language's higher-level language category.
 
 To do this, we modify our scatter plot code above. Specifically, we will add an argument to the `aes` function, specifying that the points should be coloured by the `category` column:
@@ -300,7 +295,7 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue, color = category)) +
 
 What do we see when considering the second part of our exploratory question? Do we see a difference in the pattern of the relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home between higher-level language categories? Probably not!
 
-For each higher-level language category there appears to be a positive relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home. This relationship looks similar, regardless of the category. 
+For each higher-level language category, there appears to be a positive relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home. This relationship looks similar, regardless of the category. 
 
 Does this mean that this relationship is positive for all languages in the world? Can we use this data visualization on its own to predict how many people have a given language as their mother tongue if we know how many people speak it as their primary language at home?
 
@@ -310,15 +305,7 @@ see more of later in this course.
 
 ### Putting it all together
 
-Below, we put everything from this chapter together in one code chunk. We have 
-added a few more layers to make the data visualization even more effective. 
-Specifically we used have improved the visualizations accessibility by choosing 
-colours that are easier to distinguish and also mapped category to 
-shape, we handled the problem of overlapping data points by making them slightly
-transparent, and we changed the background from grey to white to improve the 
-contrast. This demonstrates the power of R: in relatively few lines of code, we 
-are able to create an entire data science workflow with a highly effective
-data visualization.
+In the code chunk below, we put everything from this chapter together. We have added a few more layers to make the data visualization even more effective. Specifically, we have improved the visualization's accessibility by choosing colours that are easier to distinguish. We also mapped category to shape, handled the overlapping data points by making them slightly transparent, and changed the background from grey to white to improve the contrast. 
 
 ```{r nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Putting it all together: Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
 library(tidyverse)
@@ -342,3 +329,4 @@ ggplot(can_lang, aes(
   scale_y_log10(labels = scales::comma) +
   theme_bw() # use a theme to have a white background
 ```
+This exercise demonstrates the power of R. In relatively few lines of code, we performed an entire data science workflow with a highly effective data visualization! We asked a question, read the data into R, wrangled the data (using `mutate`) and created a data visualization to help answer our question.  In this chapter, you got a quick taste of the data science workflow, but we will learn each of these steps in more detail in the coming chapters! 
