moving mutate to wrangling chapter, bringing select and filter back to chapt 1

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -390,6 +390,97 @@ spoke_often_at_home
 ```
 
 
+
+We will begin with a scatter plot of the `mother_tongue` and `most_at_home` columns from our data frame.
+To create a scatter plot of these two variables using the `ggplot` function, we would the following: 
+
+```{r img-ggplot, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Creating a scatter plot with the ggplot function", out.width="1100", fig.retina = 2}
+knitr::include_graphics("img/function_ggplot.jpeg")
+```
+
+Below we create a scatter plot using the `ggplot` function as shown in figure \@ref(fig:img-ggplot):
+```{r mother-tongue-vs-most-at-home, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home"}
+ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
+  geom_point()
+``` 
+
+### Changing the units
+
+```{r changing_the_units, include = FALSE}
+english_mother_tongue <- can_lang %>%
+  filter(language == "English") %>%
+  pull(mother_tongue)
+census_popn <- 35151728
+```
+
+Earlier we found that `r format(english_mother_tongue, scientific = FALSE, big.mark = ",")` 
+people reported that their mother tongue was English in the 2016 Canadian census. What does this number mean to us? To understand this number, we need context. In particular, how many people were in Canada when this data was collected? From the 2016 Canadian 
+census profile, the population was reported to be 
+`r format(census_popn, scientific = FALSE, big.mark = ",")` people. The number of people who report that English is their mother tongue is much more meaningful when we report it in this context. We can even go a step further and transform this count to a relative frequency or proportion to represent this as a single meaningful number in our data visualizations. We can do this by dividing the number of people reporting a given language as their mother tongue by the number of people who live in Canada. For example, the proportion of people who reported that their mother tongue was English in the 2016 Canadian census was `r format(round(english_mother_tongue/census_popn, 2), scientific = FALSE, big.mark = ",")`.
+
+
+We can use the `mutate` function in R to calculate the proportion for all of the languages in the 2016 Canadian census data set. `mutate` is useful for creating new columns in a data frame or transforming existing columns. Its general syntax is: 
+
+```{r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the mutate function", out.width="1100", fig.retina = 2}
+knitr::include_graphics("img/function_mutate.jpeg")
+```
+
+Below we use `mutate` to calculate the proportion of people reporting a given language as their mother tongue for all the languages in the `can_lang` data set as shown in figure \@ref(fig:img-mutate):
+```{r}
+can_lang <- mutate(can_lang, mother_tongue = mother_tongue / 35151728)
+```
+
+Let's also do this for the counts of the number of people who report that they speak a given language most often at home:
+
+```{r}
+can_lang <- mutate(can_lang, most_at_home = most_at_home / 35151728)
+can_lang
+```
+
+Finally, let's visualize the data now that we have represented it as proportions (and change our axis labels to reflect this change in units!):
+
+```{r mother-tongue-vs-most-at-home-scale-props, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home"}
+ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
+  geom_point() +
+  xlab("Language spoken most at home (proportion of Canadian residents)") +
+  ylab("Mother tongue (proportion of Canadian residents)") +
+  scale_x_log10(labels = scales::comma) +
+  scale_y_log10(labels = scales::comma)
+
+```
+
+The visualization in figure \@ref(fig:mother-tongue-vs-most-at-home-scale-props) helps us with our first question exploring the relationship between the number of people who speak a language as their mother tongue and the number who speak that language as their primary language spoken at home. We can now clearly see that most Canadians reported English as their mother tongue and the language they speak most often at home. Changing the units to include this context increases our understanding and allows us to better interpret the numbers in our data set.
+
+
+### Coloring points by group
+Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points by their category. For example, given that we have the higher-level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
+scatter plot to represent each language's higher-level language category.
+
+To do this, we modify our scatter plot code above. Specifically, we will add an argument to the `aes` function, specifying that the points should be coloured by the `category` column:
+
+```{r scatter-colour-by-category, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
+ggplot(can_lang, aes(x = most_at_home, y = mother_tongue, color = category)) +
+  geom_point() +
+  xlab("Language spoken most at home (proportion of Canadian residents)") +
+  ylab("Mother tongue (proportion of Canadian residents)") +
+  scale_x_log10(labels = scales::comma) +
+  scale_y_log10(labels = scales::comma)
+
+
+ggplot(spoke_often_at_home, aes(x = language, y = most_at_work, fill)) +
+  geom_bar(stat = "identity") 
+```
+
+What do we see when considering the second part of our exploratory question? Do we see a difference in the pattern of the relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home between higher-level language categories? Probably not!
+
+For each higher-level language category, there appears to be a positive relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home. This relationship looks similar, regardless of the category. 
+
+Does this mean that this relationship is positive for all languages in the world? Can we use this data visualization on its own to predict how many people have a given language as their mother tongue if we know how many people speak it as their primary language at home?
+
+The answer to both these questions is "no." However, with this exploratory data analysis, we can create new hypotheses, ideas,
+and questions (like the ones at the beginning of this paragraph). Answering those questions would likely involve gathering additional data and doing more complex analyses, which we will 
+see more of later in this course.  
+
 ## Combining functions using the pipe operator, `%>%`:
 
 In R, we often have to call multiple functions in a sequence to process a data frame. The basic ways of doing this can become quickly unreadable if there are many steps. For example, suppose we need to perform three operations on
